--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
+    "sonner": "^1.2.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
