CHANGE BrowserRouter to HashROuter

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://JoseRamirezV/github.io/tasks-manager/",
+  "homepage": "JoseRamirezV.github.io/tasks-manager/",
   "name": "vite-tasks-manager",
   "private": true,
   "version": "0.0.0",
