--- a/package.json
+++ b/package.json
@@ -17,16 +17,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.3",
-    "gh-pages": "^6.1.1",
-    "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
-    "sonner": "^1.2.0",
-    "zod": "^3.22.2"
+    "sonner": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
